Manuscript updates and getting NOAA temp data

--- a/docs/write_up/Figures.tex
+++ b/docs/write_up/Figures.tex
@@ -18,19 +18,20 @@
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width = \linewidth]{Omega1Omega2_Correlations}
+	\includegraphics[width = \linewidth]{"Figure 1 - Omega1Omega2_Correlations_blank"}
 	\label{fig:1}
 	\caption{Inter-species correlations for (a) spatial encounter
 		probability over all years and (b) spatial density.
 		Species-groups are clustered into three groups based on a
-		hierarchical clustering method with NOTE: Final figure will
-		have non-sig correlations blanked}
-\end{center}
+		hierarchical clustering method with non-significant
+		correlations (those where the Confidence Interval spanned zero)
+		left blank}
+	\end{center}
 \end{figure}
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width=0.8\linewidth]{SpatialFactorLoadingsOmega1Omega2}
+	\includegraphics[width=0.8\linewidth]{"Figure 2 - SpatialFactorLoadingsOmega1Omega2"}
 	\label{fig:2}
 	\caption{Spatial Factor loadings for (a) the average spatial encounter
 		probability and (b) the average density,  on the first 3
@@ -41,7 +42,7 @@
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{PCAstyle_Plots_Spatial_FishPics_Leg}
+	\includegraphics[width=\linewidth]{"Figure 3 - PCAstyle_Plots_SpatioTemp"}
 	\label{fig:3}
 	\caption{Position of each species-group on the first two loading axes from the
 	factor analysis for (a) spatio-temporal encounter probability and (b)
@@ -52,17 +53,17 @@
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width = \linewidth]{DensityFigureswithCCRevised2}
+	\includegraphics[width = \linewidth]{"Figure 4 - DensityDifferencesFigureswithCC"}
 	\label{fig:4}
 	\caption{Differences in spatial density for pairs of species and
 		expected catch rates for two different gears at three different
-	locations}
+	locations in 2015}
 \end{center}
 \end{figure}
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{TechnicalEfficiency}
+	\includegraphics[width=\linewidth]{"Figure 5 - TechnicalEfficiency"}
 	\label{fig:5}
 	\caption{Example of technical efficiency space}
 \end{center}
