--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -92,34 +92,34 @@ to be able to produce their MSY by 2020; second, all fish that are caught are
 due to be counted against the respective stock quota by 2019. The changes are
 expected to contribute to attainment of Good Environmental Status (GES) under
 the European Marine Strategy Framework Directive (MSFD;
-\cite{EuropeanParliament2008}) and move towards an Ecosystem based approach to
-fisheries management. The changes are particularly challenging for those
-operating in mixed fisheries, as unless fishers can avoid catch of unwanted
-species they will have to stop fishing when reaching their first restrictive
-quota. The potential cost to fishers in terms of under-utilised quota is
-significant \cite{Hoff2010a, Ulrich2016} and there is strong incentive to
-mitigate such losses \cite{Condie2013, Condie2013a}. The ability of fishers to
-align their catch with available quota depends on being able to exploit target
-species while avoiding unwanted catch. Methods by which fishers can alter their
-fishing patterns include by switching fishing method (e.g. trawling to netting)
-and changing technical gear characteristics (e.g. introducing escapement panels
-in nets), or the timing and location of fishing activity \cite{Fulton2011b,
-	vanPutten2012a}.
+\cite{EuropeanParliament2008}) and move Europe towards an ecosystem based
+approach to fisheries management [ref]. The changes are particularly
+challenging for those operating in mixed fisheries, as unless fishers can avoid
+catch of unwanted species they will have to stop fishing when reaching their
+first restrictive quota. This introduces a potential significant cost to
+fishers of under-utilised quota\cite{Hoff2010a, Ulrich2016} and provides a
+strong incentive to mitigate such losses \cite{Condie2013, Condie2013a}. The
+ability of fishers to align their catch with available quota depends on being
+able to exploit target species while avoiding unwanted catch. Methods by which
+fishers can alter their fishing patterns include by switching fishing method
+(e.g. trawling to netting) and changing technical gear characteristics (e.g.
+introducing escapement panels in nets), or the timing and location of fishing
+activity \cite{Fulton2011b, vanPutten2012a}.
 
 Spatio-temporal management measures (such as time-limited fishery closures)
 have been applied in the past to reduce unwanted catch with varying degrees of
-success (e.g. \cite{Needle2011, Holmes2011, Beare2010, Dinmore2003} while
+success (e.g. \cite{Needle2011, Holmes2011, Beare2010, Dinmore2003}) while
 move-on rules have also been proposed or implemented to influence catch rates
 of particular vulnerable species in order to reduce or eliminate discards
-\cite{Gardner2008, Dunn2011, Dunn2014a}. However, such measures have generally
-been targeted at individual species without considering associations and
-interactions among several species. The design of spatio-temporal management
-measures which aim to all exploitation of healthy stocks while supporting
-weaker stocks requires understanding of the spatio-temporal population dynamics
-of fish communities, a prerequisite to improving catch composition through
-spatio-temporal management approaches. 
+(e.g.\cite{Gardner2008, Dunn2011, Dunn2014a}). However, such measures have
+generally been targeted at individual species without considering associations
+and interactions among several species. The design of spatio-temporal
+management measures which aim to allow exploitation of healthy stocks while
+protecting weaker stocks requires understanding of the spatio-temporal
+population dynamics of fish communities, a prerequisite to improving catch
+composition through spatio-temporal management approaches. 
 
-[420 words]
+[427 words]
 
 \subsection{Incorporating spatial modelling advances into a single framework}
 
@@ -128,17 +128,19 @@ characterise the spatio-temporal dynamics of key components of a fish
 community. We employ a geostatistical Vector Autoregressive Spatio-temporal
 model (VAST) which includes i) a factor analysis decomposition to describe
 trends in spatio-temporal dynamics of the different species as a function of
-\textit{n} latent variables. This allows for inference of the distribution and
-density of poorly sampled species through association with the modelled factors
-and identification of community dynamics and drivers. ii) Spatio-temporal
-encounter probability and catch rates are modelled separately to allow separate
-characterisation of distributions and densities, iii) Gaussian Markov Random
-Fields (GMRFs) are used to capture spatial and temporal correlations within and
-among species for both encounter probability and catch rates, iv) this is set
-in a mixed modelling framework to allow estimation of fixed effects such as
-gear catch rate differences while integrating across random effects.
+\textit{n} latent variables\cite{Thorson2015}. This allows for inference of the
+distribution and density of poorly sampled species through association with the
+modelled factors and identification of community dynamics and drivers common
+among species groups. ii) Spatio-temporal encounter probability and catch rates
+are modelled separately to allow separate characterisation of the distribution
+of the species groups and densities upon encounter \cite{Thorson2015a}, iii)
+Gaussian Markov Random Fields (GMRFs) are used to capture spatial and temporal
+correlations within and among species for both encounter probability and catch
+rates \cite{Thorson2013}, iv) the approach is set in a mixed modelling
+framework to allow estimation of fixed effects, such as gear catch rate
+differences, while integrating across random effects.
 
-[128 words]
+[164 words]
 
 \subsection{Dynamics of Celtic Sea fisheries}
 
@@ -146,63 +148,94 @@ We use the fisheries in the Celtic Sea as a case study to understand how fish
 community dynamics affect the ability of mixed fisheries to change the
 composition of their catch through spatial and spatio-temporal avoidance. The
 Celtic Sea is a temperate sea where a large number of species make up the
-commercial catches (MORE SPECIFIC).
+commercial catches (MORE SPECIFIC - details of landings, key species, how much
+do our species contribute to overall landings?).
 
 We parameterise our spatio-temporal model using catch data from seven fisheries
-independent surveys undertaken over the period 1990 - 2015 [INSERT REF TO TABLE
-WITH SURVEYS AS SUPPL] and include nine of the main commercial species:
-Atlantic cod (\textit{Gadus morhua}), Atlantic haddock (\textit{Melanogrammus
-	aeglefinus}), Atlantic whiting (\textit{Merlangius merlangus}),
-European Hake(\textit{Merluccius merluccius}), white-bellied anglerfish
-(\textit{Lophius piscatorius}), black-bellied anglerfish (\textit{Lophius
-	budegassa}), megrim (\textit{Lepidorhombus whiffiagonis}), European
-Plaice (\textit{Pleuronectes platessa}) and Common Sole (\textit{Solea solea}).
-Each species was separated into juvenile and adult size classes based on their
-legal minimum conservation reference size (INSERT REF TO TABLE WITH SPP SIZES
-AS SUPPL). 
+independent surveys undertaken over the period 1990 - 2015 (Table S1) and
+include nine of the main commercial species: Atlantic cod (\textit{Gadus
+	morhua}), Atlantic haddock (\textit{Melanogrammus aeglefinus}),
+Atlantic whiting (\textit{Merlangius merlangus}), European
+Hake(\textit{Merluccius merluccius}), white-bellied anglerfish (\textit{Lophius
+	piscatorius}), black-bellied anglerfish (\textit{Lophius budegassa}),
+megrim (\textit{Lepidorhombus whiffiagonis}), European Plaice
+(\textit{Pleuronectes platessa}) and Common Sole (\textit{Solea solea}).  Each
+species was separated into juvenile and adult size classes based on their legal
+minimum conservation reference size (Table S2).
 
-[154 words]
+We analyse the data to understand how the different associations among
+species-groups (combination of species and size class) and their potential
+drivers. We consider how these have changed over time, and the implications for
+mixed fisheries in managing catches of quota species under the EU's landings
+obligation.
 
-\subsection{Pearson's correlations show three distinct species associations:}
-Pearson correlation coefficients for the average spatial encounter probability
-(Figure 1a) show clear strong associations between adult and juvenile
-size classes for all species (\textgreater 0.75 for all species except Hake,
-0.56).  Among species, hierarchical clustering groups three distinct species
-groups; Roundfish (cod, haddock, whiting) are found closely associated with
-each other, correlations for adult cod with adult haddock and adult whiting
-were 0.73 and 0.5 respectively, while adult haddock with adult whiting was
-0.63. Flatfish (plaice and sole) are also strongly correlated with adult plaice
-and sole having a coefficient of 0.75. The final group are principally species
-found along the shelf edge (hake, megrim and both anglerfish species) with the
-megrims more strongly associated with the budegassa anglerfish species (0.88).
+[203 words]
+
+\subsection{Pearson's correlations show three distinct species-group
+	associations:} Pearson correlation coefficients for the modelled
+average spatial encounter probability (Figure 1a) show clear strong
+associations between adult and juvenile size classes for all species
+(\textgreater 0.75 for all species except Hake, 0.56).  Among species groups,
+hierarchical clustering identified three common groups; Roundfish (cod,
+haddock, whiting) are found closely associated, with correlations for adult cod
+with adult haddock and adult whiting of 0.73 and 0.5 respectively, while adult
+haddock with adult whiting was 0.63. Flatfish (plaice and sole) are also
+strongly correlated with adult plaice and sole having a coefficient of 0.75.
+The final group are principally species found along the shelf edge (hake,
+megrim and both anglerfish species) with the megrim strongly associated with
+the budegassa anglerfish species (0.88). Negative relationships were found
+between plaice and sole and the monkfish species (-0.27, -0.26 for the adult
+size class with budegassa adults respectively) and hake (-0.33, -0.37)
+indicating spatial separation in distributions.
 
 Pearson's correlation coefficients for the average density (Figure 1b) show
-higher catches of cod are associated with higher catches of haddock (0.58) and
-whiting (0.47), as well as the two anglerfish species (0.71 for piscatorius and
-0.44 for budegassa) and hake (0.73). Similarly, plaice and sole are closely
-associated (0.31) and higher catches of one would expect to see higher catches
-of the other, but also higher catches of some juvenile size classes of
-roundfish (whiting and haddock) and anglerfish species.
+less significant relationships then for encounter probability, but still
+evident are the strong association among the roundfish with higher catches of
+cod are associated with higher catches of haddock (0.58) and whiting (0.47), as
+well as the two anglerfish species (0.71 for piscatorius and 0.44 for
+budegassa) and hake (0.73). Similarly, plaice and sole are closely associated
+(0.31) and higher catches of one would expect to see higher catches of the
+other, but also higher catches of some juvenile size classes of roundfish
+(whiting and haddock) and anglerfish species. Negative association of juvenile
+megrim, anglerfish (budegassa) and hake with adult sole (-0.61, -0.61 and -0.47
+respectively), plaice (-0.36 and -0.35 for megrim and hake only) indicate
+generally high abundance of one can predict low abundance of the other
+successfully.
 
-[210 words]
+[298 words]
 
 \subsection{Spatial drivers of average species distributions and densities:}
 The factor analysis decomposes the dominant spatial patterns driving
-differences in encounter probability and abundance. Figure 2 shows
-the first three factors for (a) average spatial encounter probability and (b)
-average density. These three factors account of 83.4 \% and 69.2 \% of the
-variance explained, respectively. A clear spatial pattern can been seen both
-for encounter probability and density, with a positive association with the
-first factor in the inshore North Easterly part of the Celtic Sea in into the
-Bristol Channel and Western English Channel, moving to a negative association
-offshore in the south-westerly waters. On the second factor a North / South
-split can be seen for encounter probability while density is more driven by a
-positive association in the deeper westerly waters. The opposite is evident on
-the third factor, with a positive association with the Easterly waters for
-encounter probability and negative with the westerly waters, while density is
-driven by a North / South split.
+differences in encounter probability and abundance. Figure 2 shows the first
+three factors for (a) average spatial encounter probability and (b) average
+density. The first three factors account of 83.4 \% of the variance in
+encounter probability and 69.2 \% of the variance in density, respectively. A
+clear spatial pattern can been seen both for encounter probability and density,
+with a positive association with the first factor in the inshore North Easterly
+part of the Celtic Sea in into the Bristol Channel and Western English Channel,
+moving to a negative association offshore in the south-westerly waters. On the
+second factor a North / South split can be seen for encounter probability while
+density is more driven by a positive association in the deeper westerly waters.
+The opposite is evident on the third factor, with a positive association with
+the Easterly waters for encounter probability and negative with the westerly
+waters, while density is driven by a North / South split.
 
-[169 words]
+The strength of the loading on the first factor was highly correlated with
+depth for both encounter probability (-0.85, CI = -0.88 to -0.81) and density
+(-0.71, CI = -0.77 to -0.65). A random forest classification tree assigned 80
+\% of the variance in the first factor for encounter probability to depth and
+predominant habitat type, with the majority (86 \%) of the variance explained
+by depth. The contribution of these covariates dropped to 25 \% on the second
+factor with a more even split between depth and habitat, while explaining 60 \%
+of the variance on the third factor. For density, the covariates explained less
+of the variance with 62 \%, 35 \%, and 31 \% for each of the factors,
+respectively.
+
+It is evident that depth and to a lesser extent habitat are important
+predictors of similarities and differences in species distributions and
+abundances. However,....
+
+[324 words]
 
 \subsection{How species relationships and spatial patterns have changed over
 	time:}
@@ -266,8 +299,9 @@ commercial demersal fish in moving to the EU landing obligation.]]
 	\caption{Inter-species correlations for (a) spatial encounter
 		probability over all years and (b) spatial density.
 		Species-groups are clustered into three groups based on a
-		hierarchical clustering method with NOTE: Final figure will
-		have non-sig correlations blanked}
+		hierarchical clustering method with non-significant
+		correlations (those where the Confidence Interval spanned zero)
+		left blank}
 \end{center}
 \end{figure}
 
@@ -298,7 +332,7 @@ commercial demersal fish in moving to the EU landing obligation.]]
 	\label{fig:4}
 	\caption{Differences in spatial density for pairs of species and
 		expected catch rates for two different gears at three different
-	locations}
+	locations in 2015}
 \end{center}
 \end{figure}
 
