Small changes to manuscript and fig 5

--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -311,10 +311,13 @@ cod, hake and anglerfishes in the catch with the Otter trawl catching a greater
 proportion of the roundfish, haddock, whiting and cod. The offshore area has a
 higher contribution of megrim, anglerfishes and hake with the Otter trawl
 catching a greater share of hake and the Beam trawl a greater proportion of
-megrims. Megrim dominates the catch for both gears reflecting its relative
+megrim. Megrim dominates the catch for both gears reflecting its relative
 abundance in the area.
 
-TALK ABOUT FIGURE 5
+Figure 5 shows the joint production function for all locations in the model
+giving the global production sets for the years 2011 - 2015. The plots
+illustrate the scope for vessels to change the relative composition of each
+species in the catch as a function of changing location fished only.
 
 [459 words]
 
